# oracle-dba-platform

./: .env.example  .gitignore  LEIA_CORRECAO_AGENT_404.txt  README.md  README_BUILD_INSTALADOR_NSIS.md  README_BUILD_PORTABLE.md  README_FINAL.md  README_V2_1_0.md  README_V2_2_0.md  README_V2_3_0.md  README_V2_4_0.md  README_V2_5_0.md  README_V2_6_0.md  README_V2_7_0.md  README_V2_8_0.md  index.html  package-lock.json  package.json  tsconfig.bridge.json  tsconfig.json  vite.config.ts
agent-rust/: Cargo.toml  README.md  config.example.json  config.json
agent-rust/scripts/: install-service.ps1  package-agent.ps1  uninstall-service.ps1
agent-rust/src/: main.rs
backend/node/: oracle-bridge.ts
central-api/: .env.example  README.md  README_AUTH_DB.md  README_STRUCTURE.md  package-lock.json  package.json  server.cjs
central-api/lib/: password.cjs
central-api/middleware/: permissions.cjs
central-api/prisma/: schema.prisma
central-api/routes/: users.cjs
dashboard-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard-web/src/: main.jsx  styles.css
legacy/oracle_projeto_final/: build_portable.bat  build_portable_sem_instalar.bat  main.js  (+3 more)
scripts/: assemble-portable.cjs  build-oracle-bridge.cjs  build-portable-windows.bat  build-portable-windows.ps1  start-platform-dev.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: webview2-hooks.nsi
src-tauri/resources/oracle-bridge/: README.txt  oracle-bridge.cjs
src-tauri/resources/webview2/: COLOQUE_AQUI_O_WEBVIEW2.txt
src-tauri/src/: lib.rs  main.rs
(+42 files in other folders)
