[package]
name = "oracle-dba-agent"
version = "3.2.2"
edition = "2021"
description = "Oracle DBA Enterprise Agent - Windows Service"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
