[package]
name = "oracle-dba-desktop"
version = "2.2.0"
description = "Oracle DBA Desktop"
authors = ["Jeferson Sanchina"]
edition = "2021"

[lib]
name = "oracle_dba_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
